
	* generic/ttk/ttkWidget.c: Remove unnecessary casts.

2008-11-09  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkCanvas.c:    make all Tk_CustomOption tables const and
	* generic/tkCanvBmap.c:  remove unnecessary type cast
	* generic/tkCanvImg.c:
	* generic/tkCanvPoly.c:
	* generic/tkCanvText.c:
	* generic/tkCanvWind.c:
	* generic/tkRectOval.c:
	* generic/tkScrollbar.c:
	* generic/tk.decls:     One more (hopefully the last) signature change
	* generic/tkInt.h:      in Tk_CreateSmoothMethod.
	* generic/tkCanvLine.c
	* generic/tkCanvUtil.c
    * generic/tkDecls.h: (regenerated)

2008-11-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:       add "-Wno-implicit-int" flag for gcc, as on UNIX
	* win/configure     (regenerated)
	* generic/default.h Use tkUnixDefault.h under CygWin. With this change,
	                    at least the X11 version of Tk can be built with cygwin

2008-11-06  Donal K. Fellows  <dkf@users.sf.net>

	* unix/configure.in: Work around the fact that the HP-UX system
	compiler cannot handle 'inline'. [Bug 2229999]

2008-11-05  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tkUnixFont.c:   Fix [Bug 2226093] const changes not all correct
	* unix/tkUnixButton.c: More internal -Wwrite-strings warning fixes
	* unix/tkUnixCursor.c:
	* unix/tkUnixSend.c:
	* unix/tkUnixRFont.c:
	* generic/tkInt.h:     No need to use CONST in internal header files
	* generic/tkFont.h
	* generic/tkInt.decls: CONSTify string and fileName parameters of
	* generic/tkImgBmap.c: TkGetBitmapData
	* generic/tkBitmap.c:  Remove unneccessary type cast
	* generic/tkIntDecls.h: (regenerated)
	* doc/GetCursor.3:     Fix documentation about obsolete X10 bitmaps
	* doc/GetBitmap.3:     [Bug 1866774] Remove X10 references from docs

2008-11-03  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkEntry.c: Fix warning: unused variable `currentValue'
	* generic/tkOldTest.c:    Fix warning: assignment discards qualifiers
	* win/tkWinTest.c:        from pointer target type
