@@ -5,7 +5,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: CrtImgType.3,v 1.14 2008/06/30 22:57:01 dkf Exp $
+'\" RCS: @(#) $Id: CrtImgType.3,v 1.15 2008/11/09 23:16:56 nijtmans Exp $
 '\" 
 .so man.macros
 .TH Tk_CreateImageType 3 8.5 Tk "Tk Library Procedures"
@@ -60,7 +60,7 @@ the name of the image type and pointers to five procedures provided
 by the image manager to deal with images of this type:
 .CS
 typedef struct Tk_ImageType {
-    char *\fIname\fR;
+    const char *\fIname\fR;
     Tk_ImageCreateProc *\fIcreateProc\fR;
     Tk_ImageGetProc *\fIgetProc\fR;
     Tk_ImageDisplayProc *\fIdisplayProc\fR;
@@ -110,7 +110,7 @@ an image of the new type.
 .CS
 typedef int \fBTk_ImageCreateProc\fR(
         Tcl_Interp *\fIinterp\fR,
-        char *\fIname\fR,
+        const char *\fIname\fR,
         int \fIobjc\fR,
         Tcl_Obj *const \fIobjv\fR[],
         Tk_ImageType *\fItypePtr\fR,
